temp remove scroll on item list to avoid double scrollbar

--- a/src/mint/react/components/Cart/Cart.scss
+++ b/src/mint/react/components/Cart/Cart.scss
@@ -14,7 +14,7 @@ $cart__add-height: $nav-height+$padding;
   }
   .cart__items {
     height: calc(100% - #{$cart__add-height + $nav-height - $padding});
-    overflow-y: scroll;
+    overflow-y: visable;
     /* has to be scroll, not auto */
     -webkit-overflow-scrolling: touch;
   }
